# cellos

./: .agent.md  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  NOTICE  README.md  build_check.txt  build_error.txt  build_log.txt  check_log.txt  cliff.toml  create_ramdisk.py  create_ramdisk.sh  deny.toml  gen_disk.ps1  gen_disk_rpi3.ps1  limine-pioneer.conf  limine-vf2.conf  limine.conf  llms.txt  repomix-output.xml  run-arm-virt.ps1  run-cluster-arm64.ps1  run-gui.ps1  run-rpi3.ps1  run-rv32-virt.ps1  run-tests.ps1  run-x86.ps1  run.ps1  rust-toolchain.toml
apps/vios-hello/: Cargo.toml
apps/vios-hello/src/: lib.rs
apps/vios-ockam-service/: Cargo.toml
apps/vios-ockam-service/src/: lib.rs
cells/apps/fb-console/: Cargo.toml
cells/apps/fb-console/src/: font.rs  main.rs
cells/apps/sys-tools/: Cargo.toml  build.rs
cells/apps/utils/: Cargo.toml
cells/demos/adc-demo/: Cargo.toml
cells/demos/adc-demo/src/: main.rs
cells/demos/cfi-test/: Cargo.toml
cells/demos/cfi-test/src/: main.rs
cells/demos/doom/: Cargo.toml  LICENSE  build.rs
cells/demos/doom/src/: main.rs
cells/demos/hello/: Cargo.toml
cells/demos/hello-cell/: Cargo.toml  hello-cell.ld
cells/demos/hotswap-demo-v1/: Cargo.toml
cells/demos/hotswap-demo-v1/src/: main.rs
cells/demos/hotswap-demo-v2/: Cargo.toml
cells/demos/hotswap-demo-v2/src/: main.rs
cells/demos/http-smoke/: Cargo.toml
cells/demos/http-smoke/src/: main.rs
cells/demos/periph-demo/: Cargo.toml
cells/demos/periph-demo/src/: main.rs
cells/demos/pwm-demo/: Cargo.toml
cells/demos/pwm-demo/src/: main.rs
cells/demos/sdk-demo/: Cargo.toml
drivers/vios-driver-network/: Cargo.toml
drivers/vios-driver-network/src/: lib.rs
fuzz/: Cargo.toml
fuzz/src/: elf_parser.rs  vfs_path.rs
hal/core/: Cargo.toml
hal/core/src/: lib.rs
hal/hal-core/: Cargo.toml
hal/hal-core/src/: gpio.rs  lib.rs
hal/hal-core/src/boot/: mod.rs
hal/hal-core/src/console/: mod.rs
hal/hal-core/src/uart/: mod.rs
kernel/: Cargo.toml  build.rs  build_error.txt  linker-riscv32.ld  linker-rpi3.ld  linker-x86-64.ld  linker.ld
kernel/src/: acpi.rs  audit.rs  boot.rs  cell.rs  cpu_features.rs  ed25519.rs  fast_ipc.rs  fs.rs  hypervisor.rs  intrinsics.rs  layer2_selftest.rs  lib.rs  loader.rs  main.rs  measurement_log.rs  memory.rs  platform.rs  policy.rs  prelude.rs  resource_registry.rs  sha256.rs  signing.rs  snapshot.rs  sync.rs  task.rs  timer.rs
kernel/src/arch/: context.rs  mod.rs  trap.rs
kernel/src/boot/: limine.rs
kernel/src/cell/: cap_registry.rs  hotswap.rs  registry.rs  service_registry.rs  state_stash.rs
kernel/src/embedded/: cat  config  echo  hello  init  ls  lua  shell  vfs
kernel/src/embedded-aarch64/: init
kernel/src/embedded-test-hooks/: init
kernel/src/embedded-x86_64/: init
kernel/src/fs/: attr.rs  blk.rs  fat.rs  fat32_mini.rs  fat_io.rs  mod.rs  path.rs  pathbuf.rs  pod.rs
kernel/src/fs/fat32/: bpb.rs  dir.rs  fat.rs  file.rs  mod.rs  reader.rs
kernel/src/hypervisor/: registry.rs  smoke_guest.rs
kernel/src/loader/: disk_layout.rs  early.rs  elf.rs  elf_tests.rs  mod.rs  reloc.rs  va_alloc.rs
kernel/src/memory/: cell_quota.rs  frame.rs  heap.rs  kaslr.rs  mod.rs  paging.rs  rt_heap.rs  stage2.rs  tests.rs  vma.rs
kernel/src/process/: drivers.rs  ipc_test.rs  mod.rs  scheduler.rs  syscall.rs  task.rs  tests.rs
kernel/src/process/drivers/: console_drv.rs  virtio_blk.rs  virtio_gpu.rs  virtio_hal.rs
kernel/src/snapshot/: mod.rs
kernel/src/sync/: mod.rs  spinlock.rs
kernel/src/task/: cap.rs  drivers.rs  hart_local.rs  ipc_test.rs  manifest_v2_selftest.rs  p_trust_selftest.rs  scheduler.rs  smp.rs  stack.rs  syscall.rs  tcb.rs  tests.rs  thread_cap_selftest.rs  user_hello.rs  waker.rs
kernel/src/task/drivers/: blk_nvme.rs  block.rs  console_drv.rs  driver_cell.rs  fb_console.rs  font.rs  gpio_irq.rs  input_irq_ack.rs  input_map.rs  iommu.rs  iommu_pt.rs  iommu_riscv.rs  iommu_x86.rs  irq_wait.rs  mmc.rs  nic.rs  nic_e1000.rs  pcie_ecam.rs  ramdisk.rs  registry.rs  uart.rs  virtio_blk.rs  virtio_common.rs  virtio_gpu.rs  virtio_hal.rs  virtio_input.rs  virtio_net.rs  virtio_pci.rs  virtio_rng.rs
kernel/src/task/hart_local/: ready.rs
libs/agent-proto/: Cargo.toml
libs/agent-proto/src/: lib.rs
libs/api/: Cargo.toml  build.rs
libs/api/src/: abi.rs  allocator.rs  async_io.rs  benchmark.rs  block.rs  cap.rs  cluster.rs  config.rs  display.rs  driver.rs  fs.rs  hotswap.rs  hypervisor.rs  input.rs  ipc.rs  lib.rs  manifest.rs  net.rs  posix.rs  serde_helpers.rs  services.rs  syscall.rs  syscall_tests.rs  vm.rs
libs/api/src/abi/: cap.rs  disk.rs  fast_ipc.rs  hypervisor.rs  manifest.rs  manifest_flags.rs  manifest_macro.rs  manifest_parse.rs  syscall.rs  syscall_tests.rs  task.rs  vm.rs
libs/api/src/c/: printf.c  printf.h
libs/api/src/posix/: setjmp.rs
libs/api/src/services/: benchmark.rs  cluster.rs  display.rs  fs.rs  input.rs  ipc.rs  net.rs  posix.rs  serde_helpers.rs
libs/api/tests/: contract_test.rs
libs/attestation/: Cargo.toml
libs/attestation/src/: cdi.rs  hkdf.rs  lib.rs  sha256.rs  token.rs  token_tests.rs
libs/http-core/: Cargo.toml
libs/http-core/src/: body.rs  body_chunked.rs  body_chunked_tests.rs  body_content_length.rs  body_source.rs  body_tests.rs  json.rs  json_tests.rs  lib.rs  request.rs  request_tests.rs  response.rs  response_tests.rs
libs/mlibc-shim/: Cargo.toml  build.rs
libs/mlibc-shim/src/: lib.rs
libs/ostd/: Cargo.toml  LICENSE-EXCEPTION
libs/ostd/src/: app.rs  args.rs  cap.rs  clients.rs  cluster.rs  console.rs  display.rs  dma.rs  executor.rs  fast_ipc.rs  font.rs  font_atlas.rs  fs.rs  grant.rs  heap.rs  hotswap.rs  http.rs  input.rs  io.rs  ipc.rs  lib.rs  memory.rs  mmio.rs  prelude.rs  repl.rs  runtime.rs  service.rs  silo.rs  startup.rs  sync.rs  syscall.rs  task.rs  tls.rs
libs/ostd/src/clients/: input.rs  mod.rs  (+3 more)
tools/vi-build/: Cargo.toml
tools/vi-build-test/: Cargo.toml  build.rs
tools/vi-build-test/src/: main.rs
tools/vi-build/src/: lib.rs
(+6917 files in other folders)
