[workspace]
members = [
  "kernel",
  "hal/hal-core", "hal/hal-uart", "hal/hal-riscv",
  "drivers/vios-driver-motor", "drivers/vios-driver-network", "drivers/vios-driver-virtio", "drivers/vios-driver-gpu", "libs/ostd", 
  "apps/vios-shell", "apps/vios-ockam-service", "apps/vios-hello", "hal/hal-display",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ViOS Team"]
license = "MIT"

[workspace.dependencies]
log = "0.4"
# Local crates
hal-core = { path = "hal/hal-core" }

[profile.release]
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
