[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
hal-core = { path = "../hal/hal-core" }
hal-uart = { path = "../hal/hal-uart" }
hal-riscv = { path = "../hal/hal-riscv" }
ostd = { path = "../libs/ostd" }
vios-driver-motor = { path = "../drivers/vios-driver-motor" }
vios-shell = { path = "../apps/vios-shell" }
vios-hello = { path = "../apps/vios-hello" }
vios-ipc-test = { path = "../apps/vios-ipc-test" }
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["use_spin"] }
virtio-drivers = "0.7.2"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
async-trait = "0.1.88"
bitflags = "2.9.1"
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }


[features]
default = []  # Default to no_std (bare metal)
std = []
