[package]
name = "vicell-kernel"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
types = { path = "../libs/types" }
api = { path = "../libs/api" }
log = { version = "0.4", default-features = false }
virtio-drivers = "0.7.0"
linked_list_allocator = "0.10"
rlsf = { version = "0.2", default-features = false }
async-trait = "0.1.89"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false, features = ["alloc"] }
xmas-elf = "0.9"
crc32fast = { version = "1", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
hal = { path = "../hal/core", package = "hal-core", default-features = false, features = ["riscv64"] }
riscv = "0.16.0"
fdt = "0.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal = { path = "../hal/core", package = "hal-core", default-features = false, features = ["aarch64"] }

[build-dependencies]
vergen-gitcl = { version = "1", default-features = false, features = ["build", "cargo"] }





[features]
default = []
