[package]
name = "vios-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
# Chúng ta sẽ dùng chính hal-riscv để có boot code và UART
hal-riscv = { path = "../../hal/hal-riscv" }
hal-uart = { path = "../../hal/hal-uart" }
hal-display = { path = "../../hal/hal-display" }
vios-driver-virtio = { path = "../../drivers/vios-driver-virtio" }
vios-driver-gpu = { path = "../../drivers/vios-driver-gpu" }
log = "0.4"

ostd = { path = "../../libs/ostd" }

[lib]
name = "vios_hello"
path = "src/lib.rs"
