[package]
name = "vios-ockam-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ostd = { path = "../../libs/ostd" }
log = "0.4"

# Ockam dependencies - checking compatibility
# Note: Ockam requires std for full functionality, but has no_std core modules
# For now, we'll use std feature for the service (it runs in user-space anyway)
ockam = { version = "0.121", default-features = false, features = ["std"] }
ockam_core = { version = "0.106", default-features = false, features = ["std"] }
ockam_vault = { version = "0.106", default-features = false, features = ["std"] }
