[package]
name = "vios-driver-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ostd = { path = "../../libs/ostd" }
smoltcp = { version = "0.10", default-features = false, features = ["std", "medium-ethernet", "proto-ipv4", "socket-tcp", "log"] }
log = "0.4"
