[package]
name = "hal-core"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
types = { path = "../../libs/types" }


hal-arch-trait = { path = "../traits/arch" }
hal-timer = { path = "../traits/timer" }
hal-interrupt = { path = "../traits/interrupt" }
hal-paging = { path = "../traits/paging" }

hal-uart = { path = "../traits/uart" }
hal-traits-mmc = { path = "../traits/mmc" }
hal-display = { path = "../traits/display" }
hal-hypervisor = { path = "../traits/hypervisor" }

hal-riscv = { path = "../arch/riscv", optional = true }
hal-arm = { path = "../arch/arm", optional = true }
hal-x86 = { path = "../arch/x86", optional = true }

[features]
default = ["riscv64"]
riscv64 = ["dep:hal-riscv"]
riscv32 = ["dep:hal-riscv"]
aarch64 = ["dep:hal-arm"]
arm    = ["dep:hal-arm"]
x86_64 = ["dep:hal-x86"]
x86    = ["dep:hal-x86"]
# Enable the per-arch critical-section::Impl registration.
# Must be enabled exactly once per binary (in the kernel); never in Cells.
critical-section-impl = [
    "hal-riscv?/critical-section-impl",
    "hal-arm?/critical-section-impl",
    "hal-x86?/critical-section-impl",
]
