[package]
name = "hal-core"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
types = { path = "../../libs/types", version = "0.1.0" }


hal-arch-trait = { path = "../traits/arch", version = "0.1.0" }
hal-timer = { path = "../traits/timer", version = "0.1.0" }
hal-interrupt = { path = "../traits/interrupt", version = "0.1.0" }
hal-paging = { path = "../traits/paging", version = "0.1.0" }

hal-uart = { path = "../traits/uart", version = "0.1.0" }
hal-traits-mmc = { path = "../traits/mmc", version = "0.1.0" }
hal-display = { path = "../traits/display", version = "0.1.0" }
hal-hypervisor = { path = "../traits/hypervisor", version = "0.1.0" }

hal-riscv = { path = "../arch/riscv", version = "0.2.0", optional = true }
hal-arm = { path = "../arch/arm", version = "0.1.0", optional = true }
hal-x86 = { path = "../arch/x86", version = "0.1.0", optional = true }

[features]
default = ["riscv64"]
riscv64 = ["dep:hal-riscv"]
riscv32 = ["dep:hal-riscv"]
aarch64 = ["dep:hal-arm"]
arm    = ["dep:hal-arm"]
x86_64 = ["dep:hal-x86"]
x86    = ["dep:hal-x86"]
# Enable the per-arch critical-section::Impl registration.
# Must be enabled exactly once per binary (in the kernel); never in Cells.
critical-section-impl = [
    "hal-riscv?/critical-section-impl",
    "hal-arm?/critical-section-impl",
    "hal-x86?/critical-section-impl",
]
# Propagate board-rpi3 to hal-arm so BCM2837-specific dispatch is compiled in.
board-rpi3 = ["hal-arm?/board-rpi3"]
