[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lints.rust]
# Deny unsafe code by default, but allow exceptions in specific modules (e.g., allocator)
unsafe_code = "deny"

[dependencies]
libm = "0.2.15"
types = { path = "../types" }
postcard = { version = "1", default-features = false, features = ["postcard-derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }


[features]
default = []
posix = []
# Opt-in mlibc Tier B: suppresses posix.rs C symbols so mlibc's libc.a can link
# without duplicate-symbol errors.  Cells that opt in must also depend on mlibc-shim.
mlibc = []
