[package]
name = "ostd"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
types   = { path = "../types" }
api     = { path = "../api" }
spin    = { workspace = true }
fontdue = { workspace = true }
linked_list_allocator = "0.10"
# hashbrown 0.15 uses foldhash as the default hasher — no ahash, no once_cell.
# hashbrown 0.14 (ahash) pulled in once_cell 1.21.x which fails to compile for
# riscv64gc-unknown-none-elf with Rust nightly 1.97+ (race.rs prelude regression).
hashbrown    = { version = "0.15", default-features = false, features = ["default-hasher"] }
embedded-io  = { version = "0.7",  default-features = false }
serde        = { version = "1",    default-features = false }

[features]
default = []
