[package]
name = "ostd"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
# Cells may link against ostd under any license — see LICENSE-EXCEPTION.

[dependencies]
types   = { path = "../types" }
api     = { path = "../api" }
spin    = { workspace = true }
fontdue = { workspace = true }
linked_list_allocator = "0.10"
# hashbrown 0.15 uses foldhash as the default hasher — no ahash, no once_cell.
# hashbrown 0.14 (ahash) pulled in once_cell 1.21.x which fails to compile for
# riscv64gc-unknown-none-elf with Rust nightly 1.97+ (race.rs prelude regression).
hashbrown    = { version = "0.15", default-features = false, features = ["default-hasher"] }
embedded-io  = { version = "0.7",  default-features = false }
heapless     = { version = "0.8",  default-features = false }
serde        = { version = "1",    default-features = false }
# Optional: pure HTTP/1.1 + JSON protocol logic. Gated behind the `http`/`json`
# features so non-networked Cells (the vast majority) pay ZERO binary cost — no
# serde_json, no httparse linked unless a Cell opts in. Default features below
# enable NEITHER, so adding this dep is purely additive for existing cells.
http-core   = { path = "../http-core", optional = true }

[features]
default = []
# `json` exposes `ostd::json` (serde_json codec + `get_str`).
json = ["dep:http-core"]
# `http` exposes `ostd::http` (RequestBuilder, header parse, BodyReader,
# HttpClient, TlsStream). Pulls http-core; works over TcpStream or TlsStream.
http = ["dep:http-core"]
