[package]
name    = "fb-console"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "fb-console"
path = "src/main.rs"

[dependencies]
ostd = { path = "../../../libs/ostd", version = "0.2.0" }
api  = { path = "../../../libs/api", version = "0.1.0" }

[build-dependencies]
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }
