[package]
name = "app-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ostd = { path = "../../../libs/ostd" }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "head"
path = "src/bin/head.rs"

[[bin]]
name = "tail"
path = "src/bin/tail.rs"

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "sort"
path = "src/bin/sort.rs"

[[bin]]
name = "sed"
path = "src/bin/sed.rs"
