[package]
name = "adc-demo"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
types            = { path = "../../../libs/types", version = "0.1.0" }
api              = { path = "../../../libs/api", version = "0.1.0" }
ostd             = { path = "../../../libs/ostd", version = "0.2.0" }
driver-adc-sim   = { path = "../../drivers/adc-sim", version = "0.1.0" }
hal-adc          = { path = "../../../hal/traits/adc", version = "0.1.0" }

[[bin]]
name = "adc-demo"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }
