[package]
name = "doom"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "DOOM port via doomgeneric — runs on ViCell compositor with VirtIO keyboard input"

[[bin]]
name = "doom"
path = "src/main.rs"

[dependencies]
api  = { path = "../../../libs/api", version = "0.1.0" }
ostd = { path = "../../../libs/ostd", version = "0.2.0" }

[build-dependencies]
cc         = "1.0"
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }
