[package]
name = "hello-cell"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
api   = { path = "../../../libs/api", version = "0.1.0" }
ostd  = { path = "../../../libs/ostd", version = "0.2.0" }

[build-dependencies]
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }

[[bin]]
name = "hello-cell"
path = "src/main.rs"
