[package]
name = "hotswap-demo-v1"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
api  = { path = "../../../libs/api" }
ostd = { path = "../../../libs/ostd" }

[[bin]]
name = "hotswap-demo-v1"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build" }
