[package]
name = "hotswap-demo-v2"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
api  = { path = "../../../libs/api" }
ostd = { path = "../../../libs/ostd" }

[[bin]]
name = "hotswap-demo-v2"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build" }
