[package]
name = "hotswap-demo-v2"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
api  = { path = "../../../libs/api", version = "0.1.0" }
ostd = { path = "../../../libs/ostd", version = "0.2.0" }

[[bin]]
name = "hotswap-demo-v2"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }
