[package]
name = "app-http-smoke"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
types = { path = "../../../libs/types", version = "0.1.0" }
api   = { path = "../../../libs/api", version = "0.1.0" }
# Opt in to the new HTTP/1.1 + JSON surface. Most cells do NOT do this — it is
# what proves the feature gate is purely additive (default cells stay lean).
ostd  = { path = "../../../libs/ostd", version = "0.2.0", features = ["http", "json"] }

[[bin]]
name = "http-smoke"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }
