[package]
name = "periph-demo"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
types        = { path = "../../../libs/types", version = "0.1.0" }
api          = { path = "../../../libs/api", version = "0.1.0" }
ostd         = { path = "../../../libs/ostd", version = "0.2.0" }
driver-gpio  = { path = "../../drivers/gpio", version = "0.1.0" }
driver-serial = { path = "../../drivers/serial", version = "0.2.0" }
hal-gpio     = { path = "../../../hal/traits/gpio", version = "0.1.0" }
hal-uart     = { path = "../../../hal/traits/uart", version = "0.1.0" }

[[bin]]
name = "periph-demo"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }
