[package]
name = "pwm-demo"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
types            = { path = "../../../libs/types", version = "0.1.0" }
api              = { path = "../../../libs/api", version = "0.1.0" }
ostd             = { path = "../../../libs/ostd", version = "0.2.0" }
driver-gpio      = { path = "../../drivers/gpio", version = "0.1.0" }
driver-pwm-gpio  = { path = "../../drivers/pwm-gpio", version = "0.1.0" }
hal-gpio         = { path = "../../../hal/traits/gpio", version = "0.1.0" }
hal-pwm          = { path = "../../../hal/traits/pwm", version = "0.1.0" }

[[bin]]
name = "pwm-demo"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build", version = "0.2.0" }
